# Solitaire_Solver

./: .gitignore  Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/solver_core/: Cargo.toml
crates/solver_core/src/: config.rs  error.rs  lib.rs  types.rs
crates/solver_core/src/belief/: mod.rs
crates/solver_core/src/cards/: mod.rs
crates/solver_core/src/closure/: mod.rs
crates/solver_core/src/core/: belief.rs  belief_state.rs  column.rs  hidden.rs  mod.rs  state.rs  unseen.rs
crates/solver_core/src/deterministic_solver/: mod.rs  tests.rs
crates/solver_core/src/experiments/: autoplay.rs  benchmark.rs  calibration.rs  mod.rs  oracle.rs  pimc.rs  presets.rs  progress.rs  regression.rs  reporting.rs
crates/solver_core/src/hashing_tt/: mod.rs
crates/solver_core/src/ml/: mod.rs  (+1 more)
crates/solver_core/tests/: workflow_smoke.rs
crates/workbench/: Cargo.toml
crates/workbench/src/: main.rs  server.rs  workbench.rs
docs/: architecture.md  roadmap.md
docs/module_notes/: belief.md  closure.md  core.md  deterministic_solver.md  experiments.md  hashing_tt.md  late_exact.md  ml.md  moves.md  planner.md  session.md  stock.md
docs/workbench/: README.md
python/: README.md
python/solitaire_ml/: __init__.py  dataset.py  model.py  train.py
python/tests/: test_vnet_training.py
reports/: top3_10.csv  top3_10.json
target_refine_build/debug/: libsolver_core.d  solitaire-cli.d
target_refine_build2/debug/: libsolver_core.d  solitaire-cli.d
target_refine_tests/: .rustc_info.json
target_refine_tests2/: .rustc_info.json
tests/: README.md
(+98 files in other folders)
