[workspace]
members = [
    "crates/solver_core",
    "crates/cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://example.invalid/solitaire_solver"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }

